--- a/AulaVirtual/app/build.gradle
+++ b/AulaVirtual/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:gridlayout-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
