--- a/AulaVirtual/app/src/main/AndroidManifest.xml
+++ b/AulaVirtual/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:name=".ui.LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.Login" />
+        <activity android:name=".ui.CrearCursosActivity"></activity>
     </application>
 
 </manifest>
