--- a/AulaVirtual/app/src/main/AndroidManifest.xml
+++ b/AulaVirtual/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -21,7 +22,15 @@
             android:name=".ui.LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.Login" />
-        <activity android:name=".ui.CrearCursosActivity"></activity>
+        <activity android:name=".ui.CrearCursosActivity" />
+        <activity
+            android:name=".ui.AsignaturasProfesorActivity"
+            android:label="Asignaturas Profesor"
+            android:theme="@style/AppTheme.Aula" />
+        <activity android:name=".ui.CrearAsignaturasActivity" />
+        <activity android:name=".ui.AsignaturasAlumnoActivity"
+            android:label="Asignaturas Alumno"
+            android:theme="@style/AppTheme.Aula"/>
     </application>
 
 </manifest>
